Better update auto restart, restart on mod reload
Only took 4 attempts